Set CI Java version to Java 11 (nichogx/DiscordRoleSync!22)